k8s/test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eegfaktura-member-onboarding-test
