k8s/test/07-ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member-onboarding-test-web
  namespace: eegfaktura-member-onboarding-test
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: member-onboarding-test.eegfaktura.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
